Fix z-index of transfer manager to be on top of preview

--- a/applications/drive/src/app/components/TransferManager/TransferManager.scss
+++ b/applications/drive/src/app/components/TransferManager/TransferManager.scss
@@ -4,7 +4,7 @@
 	position: fixed;
 	inset-inline-end: 0;
 	inset-block-end: 0;
-	z-index: 80;
+	z-index: 352;
 	box-shadow: var(--shadow-lifted);
 	color: var(--text-norm);
 	transition: 0.15s cubic-bezier(0.22, 1, 0.36, 1);
